Avoid further runtime warnings about negative font sizes

This amends 863929f44639203c6678ca0f1a16e69e2d941cf0 as both point and
pixel sizes may be -1 (undefined).

Fixes: QTBUG-128583
Pick-to: 6.2 5.15
Change-Id: Iab99d645ea0fad24553a7cd09e73ae65f318f9ef
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>
(cherry picked from commit 82e70e32074bccf1077cc87536a884cdf6860a0c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 72763a4d6bbcf51b4bebc429099e7a0f30c00f70)
(cherry picked from commit b83bde8602546e4aa2cd8940c85db18e1d481ad3)
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>