src/svg/qsvgtinydocument.cpp
@@ -241,9 +241,10 @@ void QSvgTinyDocument::draw(QPainter *p, const QRectF &bounds)
     p->setRenderHint(QPainter::Antialiasing);
     p->setRenderHint(QPainter::SmoothPixmapTransform);
     QFont font(p->font());
-    if (font.pointSize() < 0)
+    if (font.pointSize() < 0 && font.pixelSize() > 0) {
         font.setPointSizeF(font.pixelSize() * 72.0 / p->device()->logicalDpiY());
-    p->setFont(font);
+        p->setFont(font);
+    }
     QList<QSvgNode*>::iterator itr = m_renderers.begin();
     applyStyle(p, m_states);
     while (itr != m_renderers.end()) {
